fixed overflowing selftext by adding overflow:auto to responsivedrawer-content-7 which appears to be root container

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ blockquote p {
 
 .ResponsiveDrawer-content-7 {
   padding: 2px!important;
+  overflow: auto!important;
 }
 
 .ResponsiveDrawer-menuButton-4 {
